syntax = "proto3";
package gonpe.server.user;
option go_package = "pb";

import "google/protobuf/timestamp.proto";
import "validate/validate.proto";

enum Role {
    ROLE_UNKNOWN = 0;

    ROLE_GUEST = 1;
    ROLE_VIEWER = 2;
    ROLE_ADMIN = 3;
}

message User {
    string id = 1 [(validate.rules).string.len = 20];
    string auth_provider_user_id = 2;
    Role role = 3;
    google.protobuf.Timestamp created_at = 4 [(validate.rules).timestamp.required = true];
    google.protobuf.Timestamp updated_at = 5 [(validate.rules).timestamp.required = true];
}

